--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,11 @@
-
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@4
+workflows:
+  test:
+    jobs:
+      - cypress/run:
+          install-browsers: true
+          start-command: 'npm run start'
+          cypress-command: 'npx cypress run --browser chrome'
+  
