--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,7 @@ version: 2.1
 orbs:
   cypress: cypress-io/cypress@4
 workflows:
-  test:
+  build:
     jobs:
       - cypress/run:
-          install-browsers: true
-          start-command: 'npm run start'
-          cypress-command: 'npx cypress run --browser chrome'
-  
+          yarn: true 
